# ruc-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  smithery.yaml
.github/workflows/: release.yml
npm/: index.js  package.json
npm-darwin-arm64/: package.json
npm-darwin-x64/: package.json
npm-linux-arm64/: package.json
npm-linux-x64/: package.json
npm-win32-x64/: package.json
src/: main.rs  mcp.rs  tools.rs
tests/: protocol.rs  tools.rs
