[package]
name = "ruc-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for SUNAT RUC registry lookup"
license = "Apache-2.0"

[[bin]]
name = "ruc-mcp"
path = "src/main.rs"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
